--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
     <title>The Collection</title>
 </head>
 <body> 
@@ -13,72 +13,9 @@
             <h1>Leonidas's Collection</h1>
     </header>
 
-    <main>
-        <section>
-            <div class="container">
-                <div class="card">
-                    <div class="card-preview">
-                        <iframe width="1280" height="720" src="https://www.youtube.com/embed/vhYedzqhyRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                    <div class="card-info">
-                        <h1 id="name">Author</h1>
-                        <h2 id="titre">Titre</h2>
-
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-preview">
-                        <iframe width="1280" height="720" src="https://www.youtube.com/embed/TVG1ALcGf7Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                    <div class="card-info">
-                        <h1 id="name">Author</h1>
-                        <h2 id="titre">Titre</h2>
-
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-preview">
-                        <iframe width="1280" height="720" src="https://www.youtube.com/embed/1z2MKRJtQuE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                    <div class="card-info">
-                        <h1 id="name">Author</h1>
-                        <h2 id="titre">Titre</h2>
-
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-preview">
-                        <iframe width="1280" height="720" src="https://www.youtube.com/embed/vhYedzqhyRg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                    <div class="card-info">
-                        <h1 id="name">Author</h1>
-                        <h2 id="titre">Titre</h2>
-
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-preview">
-                        <iframe width="1280" height="720" src="https://www.youtube.com/embed/TVG1ALcGf7Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                    <div class="card-info">
-                        <h1 id="name">Author</h1>
-                        <h2 id="titre">Titre</h2>
-
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-preview">
-                        <iframe width="1280" height="720" src="https://www.youtube.com/embed/1z2MKRJtQuE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                    <div class="card-info">
-                        <h1 id="name">Author</h1>
-                        <h2 id="titre">Titre</h2>
-
-                    </div>
-                </div>
-                
-
-            </div>
+    <main id='main'>
+        <section id="home">
+            
 
         </section>
 
