--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="app.js" defer></script>
+    <script src="https://kit.fontawesome.com/97bceb2613.js" crossorigin="anonymous"></script>
     <title>The Collection</title>
 </head>
 <body> 
